welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:11: error: ')' expected but 'else' found.
    else if (litMessage()=="X") {recule(3) ;}
    ^BDRBuggle:13: error: ';' expected but 'else' found.
  else {fini = true;};
  ^BDRBuggle:16: error: Unmatched closing brace '}' ignored here
	}
        ^